# meshinspector

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py
MeshLib/test_python/helper/: win_init.py
docs/: Customizable Jewelry 3D Model Editing Pipeline.md  MeshInspector Feature Ground Truth.md  MeshInspector Technical Reference.md  MeshLib Jewelry Manufacturability Architecture.md  Production V1 Remaining Gaps.md  handling_gltf_stl_issue.md
meshinspector-backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
meshinspector-backend/alembic/: env.py  script.py.mako
meshinspector-backend/alembic/versions/: 20260320_0001_initial_schema.py  20260320_0002_dev_task_queue.py
meshinspector-backend/api/: serializers.py
meshinspector-backend/api/routers/: __init__.py  jobs.py  models.py  operations.py  versions.py
meshinspector-backend/api/routes/: analyze.py  health.py  process.py  upload.py
meshinspector-backend/core/: config.py  db.py  logging.py
meshinspector-backend/domain/: models.py  schemas.py
meshinspector-backend/models/: schemas.py
meshinspector-backend/services/: __init__.py  analyze.py  convert.py  health.py  hollow.py  ingest.py  manufacturability.py  measure_ring.py  operations.py  regions.py  repair.py  resize.py  thickness.py  thickness_meshlib.py  versioning.py
meshinspector-backend/storage/: object_store.py  repositories.py
meshinspector-backend/utils/: file_io.py  units.py
meshinspector-backend/workers/: celery_app.py  dev_queue.py  dispatch.py  runtime.py  tasks.py
meshinspector-frontend/: package-lock.json  package.json
meshinspector-frontend/public/meshlib-workbench/: bridge.js  index.html  styles.css
meshinspector-frontend/public/meshlib-workbench/runtime/: ViewerApp.js  manifest.json  runtime_bootstrap.js
meshinspector-frontend/src/app/: globals.css  layout.tsx  page.tsx
meshinspector-frontend/src/app/viewer/: ViewerControls.tsx  ViewerStats.tsx  page.tsx
meshinspector-frontend/src/components/: LoadingOverlay.tsx  ModelViewer.tsx  Navbar.tsx  QueryProvider.tsx  ToolPanel.tsx  ToolSidebar.tsx  UploadDropzone.tsx
meshinspector-frontend/src/components/tools/: BatchSizePanel.tsx  HealthPanel.tsx  HollowToolPanel.tsx  InspectToolPanel.tsx  ModelInfoPanel.tsx  SectionToolPanel.tsx
meshinspector-frontend/src/features/editor/: store.ts
meshinspector-frontend/src/features/editor/hooks/: useJobEventStream.ts  useJobPolling.ts  useVersionViewer.ts
meshinspector-frontend/src/features/editor/panels/: AdvancedEditPanel.tsx  ComparePanel.tsx  GuidedWorkflowPanel.tsx  JobActivityPanel.tsx  ManufacturabilityPanel.tsx  OverlayLegendPanel.tsx  VersionHistoryPanel.tsx
meshinspector-frontend/src/features/editor/viewer/: MeshLibWorkbenchHost.tsx  ViewerEngine.tsx
meshinspector-frontend/src/features/editor/workspace/: CommandBar.tsx  ModelInspector.tsx  ReviewInspector.tsx  StatusStrip.tsx  ToolInspector.tsx  toolRegistry.ts  types.ts
meshinspector-frontend/src/hooks/: useModelProcessing.ts
meshinspector-frontend/src/lib/: constants.ts  queryClient.ts
meshinspector-frontend/src/lib/api/: client.ts  models.ts  types.ts
meshlib-workbench/: CMakeLists.txt  MeshInspectorWorkbenchPlugin.cpp  MeshInspectorWorkbenchPlugin.items.json  MeshInspectorWorkbenchPlugin.ui.json  README.md  ViewerApp.cpp  build_wasm.sh
meshlib-workbench/build-wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
meshlib-workbench/build-wasm/html/: compose_html.js
meshlib-workbench/cmake-shims/: BoostConfig.cmake  BoostConfigVersion.cmake  Eigen3Config.cmake  tl-expectedConfig.cmake
meshlib-workbench/wasm/: index.html
